Cor adicionado pelo CSS

--- a/src/404.html
+++ b/src/404.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-80">
         <title>Clic.ly - not found page</title>
+        <link rel="stylesheet" href="css/settings/color.css">
+        <link rel="stylesheet" href="css/elements/base.css">
     </head>
     <body>
         <header>
@@ -14,5 +16,7 @@
                     <a href="">Log in</a>
                 </nav>
         </header>
+        <h1>Seems like we were note ready fir that click</h1>
+        <h2>Well, let’s at least play a game?</h2>
     </body>
 </html>
