--- a/src/404.html
+++ b/src/404.html
@@ -3,16 +3,23 @@
     <head>
         <meta charset="utf-80">
         <title>Clic.ly - not found page</title>
+        <link href="https://fonts.googleapis.com/css?
+            family=Bitter:400,400i,700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?
+            family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="css/settings/color.css">
         <link rel="stylesheet" href="css/elements/base.css">
+        <link rel="stylesheet" href="css/components/main-logo.css">
+        <link rel="stylesheet" href="css/components/simple-action.css">
     </head>
     <body>
         <header>
-            <h1>Clic.ly</h1>
+            <h1 class="main-logo">Clic.ly</h1>
                 <nav>
-                    <a href="">Home</a>
-                    <a href="">Pricing</a>
-                    <a href="">About Us</a>
+                    <a class="simple-action" href="">Home</a>
+                    <a class="simple-action" href="">Pricing</a>
+                    <a class="simple-action" href="">About Us</a>
                     <a href="">Log in</a>
                 </nav>
         </header>
