--- a/src/404.html
+++ b/src/404.html
@@ -9,18 +9,26 @@
             family=Comfortaa:300,400,500,700&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="css/settings/color.css">
+        <link rel="stylesheet" href="css/settings/gap.css">
         <link rel="stylesheet" href="css/elements/base.css">
+        
+        <link rel="stylesheet" href="css/components/primary-button.css">
         <link rel="stylesheet" href="css/components/main-logo.css">
         <link rel="stylesheet" href="css/components/simple-action.css">
+
+        <link rel="stylesheet" href="css/components/containers/main-header.css">
+        <link rel="stylesheet" href="css/components/containers/main-body.css">
+        <link rel="stylesheet" href="css/components/containers/main-menu.css">
+
     </head>
-    <body>
-        <header>
+    <body class="main-body">
+        <header class="main-header">
             <h1 class="main-logo">Clic.ly</h1>
-                <nav>
+                <nav class="main-menu">
                     <a class="simple-action" href="">Home</a>
                     <a class="simple-action" href="">Pricing</a>
                     <a class="simple-action" href="">About Us</a>
-                    <a href="">Log in</a>
+                    <a class="primary-button" ref="">Log in</a>
                 </nav>
         </header>
         <h1>Seems like we were note ready fir that click</h1>
